<resources>
    <string name="app_name">OnlineBus</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Билеты</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="input_from">Откуда</string>
    <string name="input_to">Куда</string>
    <string name="btn_label_search">Поиск</string>
    <string name="example_title">8.12.2019</string>
    <string name="flight_label">Рейсы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="almaty_label">Алматы</string>
    <string name="nur_sultan_label">Нур-Султан</string>
    <string name="example_label">Темиртау Караганды</string>
    <string name="left_place_label">Осталось мест: </string>
    <string name="_42">42</string>
    <string name="label_otprav">Отправление</string>
    <string name="_19_12_2020">19.12.2020</string>
    <string name="_14_43">14:43</string>
    <string name="_24_hours">24 часа</string>
    <string name="duration_time_label">Длительность пути:</string>
    <string name="mercedes_label">Mercedes</string>
    <string name="bus_model_label">Марка автобуса:</string>
    <string name="_123ab13">123AB13</string>
    <string name="gov_number">Гос. номер:</string>
    <string name="_2012">2012</string>
    <string name="release_year_label">Год выпуска:</string>
    <string name="arrival_label">Прибытие</string>
    <string name="total_place_label">Всего мест:</string>
    <string name="_20_12_2020">20.12.2020</string>
    <string name="_1500">От 1500 т</string>
    <string name="ferryman_label">Перевозчик:</string>
    <string name="someone">Someone</string>
    <string name="admin_label">Администратор:</string>
    <string name="admin">Admin</string>
    <string name="phone_label">Телефон:</string>
    <string name="_8_888_888_88_88">8 888 888 88 88</string>
    <string name="additional_info">Дополнительная информация:</string>
    <string name="your_add_here">Your add here</string>
    <string name="todo">TODO</string>
    <string name="boook">Забронировать</string>
    <string name="_33">33</string>
    <string name="_3000_t">1500 т</string>
    <string name="booking_label">Бронирование</string>
    <string name="toolbar_passengers">Пассажиры</string>
    <string name="place_id">Место:</string>
    <string name="place_price">Тариф: </string>
    <string name="F_L_S">ФИО</string>
    <string name="phone_number">Номер телефона</string>
    <string name="user_email_hint">Email</string>
    <string name="user_IIN">ИИН</string>
    <string name="price_label">Стоимость</string>
    <string name="ticket_label">Билеты: </string>
    <string name="service_price">Сервисный сбор</string>
    <string name="total_price">Итого: </string>
    <string name="next_btn">Далее</string>
    <string name="payment_toolbar_title">Оплата</string>
    <string name="payment_card_number_hint">Номер карты</string>
    <string name="card_owner_name_hint">Имя держателя карты</string>
    <string name="expiration_date_hint">Срок действия</string>
    <string name="cvc2_cvv2">CVC2/CVV2</string>
    <string name="pay_3000_t">Оплатить 1500 т</string>
    <string name="order_detail_toolbar_title">Детали заказа</string>
    <string name="_6_12_2019">Дата заказа: </string>
    <string name="_15_57">Время заказа: </string>
    <string name="total_price_3000">Сумма: </string>
    <string name="order_detail_passenger_name">Пассажир:</string>
    <string name="success_payed_label">Оплачено!</string>
    <string name="hint_label_navigate_to_order_detail">Чтобы посмотреть покупку переходите в</string>
    <string name="history_detail_label">История заказов</string>
    <string name="ok">OK</string>
</resources>