<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/price_bg"
                android:layout_gravity="bottom|end"
                android:padding="10dp"
                android:layout_margin="10dp"
                >
                <TextView
                    android:id="@+id/average_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#FFEB3B"
                    android:layout_gravity="center"
                    android:text="@string/_1500"/>
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/from_city"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAlignment="textEnd"
                android:text="@string/almaty_label"
                android:padding="5dp"
                 />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_arrow_forward_24"
                android:background="#FFF"/>
            <TextView
                android:id="@+id/to_city"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/nur_sultan_label"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/example_label"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top"
            >

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/left_place_label"/>
                    <TextView
                        android:id="@+id/left_place_num"
                        android:layout_width="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/_42"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_otprav"
                    android:layout_marginTop="@dimen/margin_top"
                    />

                <TextView
                    android:id="@+id/departure_day_lable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_19_12_2020"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#000"
                    android:layout_marginTop="@dimen/margin_top"
                    app:drawableStartCompat="@drawable/ic_baseline_today_24" />

                <TextView
                    android:id="@+id/departure_time_lable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_14_43"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="@dimen/margin_top"
                    app:drawableStartCompat="@drawable/ic_baseline_access_time_24" />


            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/total_place_label"/>
                    <TextView
                        android:id="@+id/total_place_num"
                        android:layout_width="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/_42"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arrival_label"
                    android:layout_marginTop="@dimen/margin_top"
                    />

                <TextView
                    android:id="@+id/arrive_day_lable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_20_12_2020"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#000"
                    android:layout_marginTop="@dimen/margin_top"
                    app:drawableStartCompat="@drawable/ic_baseline_today_24" />

                <TextView
                    android:id="@+id/arrive_time_lable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_14_43"
                    android:layout_marginTop="@dimen/margin_top"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorPrimaryDark"
                    app:drawableStartCompat="@drawable/ic_baseline_access_time_24" />


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/duration_time_label"/>
            <TextView
                android:id="@+id/duration_time_hours"
                android:layout_width="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="match_parent"
                android:text="@string/_24_hours"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bus_model_label"/>
            <TextView
                android:id="@+id/bus_model"
                android:layout_width="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#000"
                android:layout_height="match_parent"
                android:text="@string/mercedes_label"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top">

               <LinearLayout
                   android:layout_weight="1"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:text="@string/release_year_label"/>
                   <TextView
                       android:id="@+id/bus_release_year"
                       android:layout_width="wrap_content"
                       android:fontFamily="sans-serif-medium"
                       android:layout_marginStart="10dp"
                       android:textColor="#000"
                       android:layout_height="match_parent"
                       android:text="@string/_2012"/>

               </LinearLayout>
            <LinearLayout
                   android:layout_weight="1"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/gov_number"/>
                    <TextView
                        android:id="@+id/bus_gos_nomer"
                        android:layout_width="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginStart="5dp"
                        android:textColor="#000"
                        android:layout_height="match_parent"
                        android:text="@string/_123ab13"/>

               </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    

</androidx.cardview.widget.CardView>