<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/success_dialog"
android:background="@drawable/alert_dialog_bg_success"
    >

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/success_payed_label"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/hint_label_navigate_to_order_detail"
           />
        <TextView
            android:id="@+id/order_history_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:fontFamily="sans-serif-medium"
            android:text="@string/history_detail_label"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#40000000"/>
    <TextView
        android:id="@+id/ok_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:text="@string/ok"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="30sp"/>


</LinearLayout>